MongolzMVC project added

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ MongolzRest/.idea/
 MongolzRest/out/
 MongolzRest/MongolzRest.iml
 MongolzRest/target/
+MongolzMVC/.idea/
+MongolzMVC/out/
+MongolzMVC/MongolzMVC.iml
+MongolzMVC/target/
