--- a/MongolzRest/src/main/resources/application.properties
+++ b/MongolzRest/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/mongolz
+jdbc.url = jdbc:mysql://localhost:3306/mongolz?useSSL=false&createDatabaseIfNotExist\=yes
 jdbc.username = root
 jdbc.password = root
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
