--- a/MongolzRest/pom.xml
+++ b/MongolzRest/pom.xml
@@ -102,6 +102,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.8.7</version>
+        </dependency>
 
     </dependencies>
 
