MongolzEmail server added

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ MongolzMVC/.idea/
 MongolzMVC/out/
 MongolzMVC/MongolzMVC.iml
 MongolzMVC/target/
+MongolzEmail/.idea/
+MongolzEmail/out/
+MongolzEmail/MongolzEmail.iml
+MongolzEmail/target/
