--- a/MongolzMVC/pom.xml
+++ b/MongolzMVC/pom.xml
@@ -123,12 +123,13 @@
                     <finalName>${project.artifactId}-${version}</finalName>
                     <artifactSet>
                         <excludes>
-                            <exclude>edu.mum:SecurityExampleDomain</exclude>
+                            <exclude>com.mongolz:SecurityExampleDomain</exclude>
                         </excludes>
                     </artifactSet>
 
                     <transformers>
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <mainClass>com.stackexchange.stackoverflow.ExecutableJar</mainClass>
                         </transformer>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
