--- a/MongolzRest/pom.xml
+++ b/MongolzRest/pom.xml
@@ -131,7 +131,7 @@
         </dependency>
 
         <!-- Spring Batch dependencies -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.batch</groupId>
             <artifactId>spring-batch-core</artifactId>
         </dependency>
@@ -169,7 +169,7 @@
         <dependency>
             <groupId>javax.el</groupId>
             <artifactId>javax.el-api</artifactId>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
 
