--- a/MongolzMVC/src/main/resources/errorMessages.properties
+++ b/MongolzMVC/src/main/resources/errorMessages.properties
@@ -1,7 +1,11 @@
-NotNull= {0} is a required field
-NotEmpty= {0} field must have a value
-Size.name = Size of the {0} must be between {2} and {1}
-email = Email format is incorrect
-
-FIRSTNAME= First Name
-LASTNAME= Last Name
+NotNull={0} is a required field
+NotEmpty={0} field must have a value
+Size.name=Size of the {0} must be between {2} and {1}
+email=Email format is incorrect
+Account.validation={0} is Invalid. It must be 6 digits
+Min.size={0} must be greater that 0
+amount=Amount
+description=Description
+toAccount.id=To Account
+FIRSTNAME=First Name
+LASTNAME=Last Name
