--- a/MongolzEmail/pom.xml
+++ b/MongolzEmail/pom.xml
@@ -102,5 +102,13 @@
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>
+       <dependency>
+           <groupId>org.hibernate</groupId>
+           <artifactId>hibernate-entitymanager</artifactId>
+       </dependency>
+       <dependency>
+           <groupId>org.hibernate</groupId>
+           <artifactId>hibernate-validator</artifactId>
+       </dependency>
   </dependencies>
  </project>
