--- a/MongolzRest/web/WEB-INF/web.xml
+++ b/MongolzRest/web/WEB-INF/web.xml
@@ -21,7 +21,7 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            classpath*:**/*Context.xml
+            classpath*:**/*context.xml
         </param-value>
     </context-param>
     <listener>
@@ -29,5 +29,15 @@
             org.springframework.web.context.ContextLoaderListener
         </listener-class>
     </listener>
+
+    <filter>
+        <display-name>Spring Security Filter</display-name>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
